springboot/springboot-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-web-demo
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
  selector:
    app: springboot-web-demo
  type: ClusterIP
