springboot/springboot-web-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: springboot-web-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: springboot-web
spec:
  hosts:
  - "*"
  gateways:
  - springboot-web-gateway
  http:
  - match:
    - uri:
        exact: /hello
   
    route:
    - destination:
        host: springboot-web-demo
        port:
          number: 8080
