springboot/springboot-web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: springboot-web-demo
  annotations:
    kubernete.io/ingress.class: "istio"
spec:
  rules:
  - host: springboot.avayalab.com
    http:
      paths:
      - path: /
        backend:
          serviceName: springboot-web-demo
          servicePort: 80
